<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/nombreUsuario"
        android:layout_weight="2"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/TextNombre"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/apellidoUsuario"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/TextApellido"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/cedulaUsuario"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/TextCedula"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="30sp"/>

    <Button
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:id="@+id/back"
        android:layout_weight="3"
        android:text="@string/back"/>

</LinearLayout>
